--- a/SignalR Tests.csproj
+++ b/SignalR Tests.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>SignalR_Tests</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.12" />
+  </ItemGroup>
+
 </Project>
